--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -22,6 +22,8 @@
             </div>
         </main>
         <footer class="popup-footer">
+            <button id="addWebsite" class="add-website-button">Add website</button>
+            <div id="confirmationMessage" class="confirmation-message" style="display: none;">Website sent for processing</div>
             TOS Buddy. All rights reserved.
         </footer>
     </div>
