--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -17,14 +17,14 @@
             <button id="sendUrl" class="send-url-button">Analyze Privacy</button>
             <div id="loadingIndicator" class="loading-indicator" style="display: none;">Loading...</div>
             <div id="apiResponseContainer" class="api-response">
-                <h2 id="websiteTitle"></h2>
-                <pre id="apiResponse"></pre>
+                <h2 id="websiteTitle" class="website-title"></h2>
+                <div id="apiResponse"></div>
             </div>
         </main>
         <footer class="popup-footer">
             <button id="addWebsite" class="add-website-button">Add website</button>
             <div id="confirmationMessage" class="confirmation-message" style="display: none;">Website sent for processing</div>
-            TOS Buddy. All rights reserved.
+            <p>TOS Buddy. All rights reserved.</p>
         </footer>
     </div>
 </body>
